erDiagram
    USER }|--o{ LEADERBOARD_USER : "appears in"
    USER ||--o{ REVIEW_SESSION : "has"
    USER ||--o{ PHRASE : "has"
    USER }o--|| LANGUAGE : "is learning"
    USER ||--o{ GAME_SESSION : "has"
    REVIEW_SESSION }|--|{ REVIEW_SESSION_PHRASE : "belongs to"
    PHRASE }|--o{ REVIEW_SESSION_PHRASE : "reviewed in"
    PHRASE ||--|| REVIEW_DATA: ""
    PHRASE }o--|| LANGUAGE : "belongs to"
    LEADERBOARD_USER }o--|{ LEADERBOARD : "belongs to"
    GAME_SESSION }o--|| GAME : "belongs to"

    USER {
        int id PK
        int native_language FK
        int learning_language FK
        bool active
        string email
        string username
        string timezone
        int current_streak
        int longest_streak
        int accumulated_points
    }

    LANGUAGE {
        int id PK
        string name
    }

    PHRASE {
        int id PK
        bool active
        int source_language_id FK
        int target_language_id FK
        int user_id FK
        string original_text
        string translated_text
        string pronunciation
        date last_reviewed_date
        date next_review_date
    }

    LEADERBOARD {
        int id PK
        date start_date
        date end_date
    }

    LEADERBOARD_USER {
        int id PK
        int user_id FK
        int leaderboard_id
        int score
    }

    REVIEW_SESSION {
        int id PK
        int user_id FK
        date date
    }

    REVIEW_SESSION_PHRASE {
        int id PK
        int review_session_id FK
        int phrase_id FK
        int try_number
        int reponse_time
        int recall_rating
    }

    REVIEW_DATA {
        int id PK
        int phrase_id PK
        int repetition_number
        int easiness_factor
        int inner_repetition_interval
    }

    GAME_SESSION {
        int id PK
        int user_id FK
        int game_id FK
        int score
    }

    GAME {
        int id PK
        string name
    }
